--- a/.htaccess
+++ b/.htaccess
@@ -20,14 +20,14 @@ RewriteRule ^blogs/top_posts/{0,1}$   modules/boonex/blogs/blogs.php?action=top_
 RewriteRule ^blogs/top_posts/([0-9]+)/([0-9]+)/{0,1}$   modules/boonex/blogs/blogs.php?action=top_posts&page=$2&per_page=$1 [QSA,L]
 RewriteRule ^blogs/tag/([^/.]+)/{0,1}$   modules/boonex/blogs/blogs.php?action=search_by_tag&tagKey=$1 [QSA,L]
 RewriteRule ^blogs/tag/{0,1}$   modules/boonex/blogs/blogs.php?action=search_by_tag&tagKey= [QSA,L]
-RewriteRule ^blogs/posts/([^/.]+)/tag/([^/.]+)/{0,1}$   modules/boonex/blogs/blogs.php?action=search_by_tag&tagKey=$2&ownerName=$1 [QSA,L]
-RewriteRule ^blogs/posts/([^/.]+)/category/([^/.]+)/{0,1}$   modules/boonex/blogs/blogs.php?action=show_member_blog&ownerName=$1&categoryUri=$2 [QSA,L]
+RewriteRule ^blogs/posts/([^/.]+)/tag/([^/.]+)/{0,1}$   modules/boonex/blogs/blogs.php?action=search_by_tag&tagKey=$2&blogOwnerName=$1 [QSA,L]
+RewriteRule ^blogs/posts/([^/.]+)/category/([^/.]+)/{0,1}$   modules/boonex/blogs/blogs.php?action=show_member_blog&blogOwnerName=$1&categoryUri=$2 [QSA,L]
 RewriteRule ^blogs/entry/([^/.]+)/{0,1}$   modules/boonex/blogs/blogs.php?action=show_member_post&postUri=$1 [QSA,L]
 RewriteRule ^blogs/entry/{0,1}$    modules/boonex/blogs/blogs.php?action=show_member_post&postUri= [QSA,L]
-RewriteRule ^blogs/posts/([^/.]+)/{0,1}$   modules/boonex/blogs/blogs.php?action=show_member_blog&ownerName=$1 [QSA,L]
-RewriteRule ^blogs/posts/{0,1}$   modules/boonex/blogs/blogs.php?action=show_member_blog&ownerName= [QSA,L]
-RewriteRule ^blogs/posts/([^/.]+)/([0-9]+)/([0-9]+)/{0,1}$   modules/boonex/blogs/blogs.php?action=show_member_blog&ownerName=$1&page=$3&per_page=$2 [QSA,L]
-RewriteRule ^blogs/posts/([^/.]+)/category/([^/.]+)/([0-9]+)/([0-9]+)/{0,1}$   modules/boonex/blogs/blogs.php?action=show_member_blog&ownerName=$1&categoryUri=$2&page=$4&per_page=$3 [QSA,L]
+RewriteRule ^blogs/posts/([^/.]+)/{0,1}$   modules/boonex/blogs/blogs.php?action=show_member_blog&blogOwnerName=$1 [QSA,L]
+RewriteRule ^blogs/posts/{0,1}$   modules/boonex/blogs/blogs.php?action=show_member_blog&blogOwnerName= [QSA,L]
+RewriteRule ^blogs/posts/([^/.]+)/([0-9]+)/([0-9]+)/{0,1}$   modules/boonex/blogs/blogs.php?action=show_member_blog&blogOwnerName=$1&page=$3&per_page=$2 [QSA,L]
+RewriteRule ^blogs/posts/([^/.]+)/category/([^/.]+)/([0-9]+)/([0-9]+)/{0,1}$   modules/boonex/blogs/blogs.php?action=show_member_blog&blogOwnerName=$1&categoryUri=$2&page=$4&per_page=$3 [QSA,L]
 RewriteRule ^blogs/home/{0,1}$   modules/boonex/blogs/blogs.php?action=home [QSA,L]
 RewriteRule ^blogs/all_posts/{0,1}$   modules/boonex/blogs/blogs.php?action=all_posts [QSA,L]
 RewriteRule ^blogs/all_posts/([0-9]+)/([0-9]+)/{0,1}$   modules/boonex/blogs/blogs.php?action=all_posts&page=$2&per_page=$1 [QSA,L]
