--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ Thumbs.db
 media/images/membership/1*.png
 media/images/blog/*.jpg
 
+modules/boonex/moxiemanager
+
 modules/boonex/forum/classes/en/*
 modules/boonex/forum/classes/ru/*
 modules/boonex/forum/js/en/*
